01-강의준비/11-실무미션/real/overprovisioning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overprovisioning
spec:
  replicas: 10
  selector:
    matchLabels:
      app: overprovisioning
  template:
    metadata:
      labels:
        app: overprovisioning
    spec:
      terminationGracePeriodSeconds: 0
      priorityClassName: overprovisioning
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - overprovisioning
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: overprovisioning
          image: public.ecr.aws/eks-distro/kubernetes/pause:3.7
          resources:
            limits:
              memory: 100Mi
            requests:
              memory: 100Mi
